gl51-master/src/test/deca/context/valid/testObject-JustClassDeclaration.deca
//Description
//Just declare a class

class A {}