gl51-master/src/test/deca/context/invalid/testObject_redefineClass.deca
//Description
// classe deja definie

class A {}
class A {}

//Passed
